# GBCEmu

./: CMakeLists.txt  GBemu.vcxproj  GBemu.vcxproj.filters  LICENSE  README.md
rom/: 1-lcd_sync.sav  Legend of Zelda, The - Link's Awakening (USA, Europe).gb.save  Pokemon Red (UE) [S][!].gb.save  oam_bug.sav  wtg.sav
src/: CMakeLists.txt  CPU.cpp  CPU.hpp  Emulator.cpp  Emulator.hpp  Memory.cpp  Memory.hpp  main.cpp
src/GBCEmu/: CMakeLists.txt  main.cpp
src/include/: APU.hpp  Bus.hpp  BusRWInterface.hpp  CPU.hpp  CPUContext.hpp  CPURegister.hpp  Cartridge.hpp  Common.hpp  Cycle.hpp  DMA.hpp  DMAContext.hpp  EmuContext.hpp  Emulator.hpp  Gamepad.hpp  IO.hpp  Instruction.hpp  Interrupt.hpp  LCD.hpp  LCDContext.hpp  PPU.hpp  RAM.hpp  RTC.hpp  Timer.hpp  UI.hpp  dbg.hpp
src/lib/: APU.cpp  Bus.cpp  CMakeLists.txt  CPU.cpp  CPUContext.cpp  CPURegister.cpp  Cartridge.cpp  Common.cpp  Cycle.cpp  DMA.cpp  DMAContext.cpp  Emulator.cpp  Emulator.hpp  Gamepad.cpp  IO.cpp  Instruction.cpp  Interrupt.cpp  LCD.cpp  PPU.cpp  RAM.cpp  RTC.cpp  Timer.cpp  UI.cpp  dbg.cpp
x64/Debug/: GBemu.exe.recipe  GBemu.ilk  vc143.idb
x64/Debug/GBemu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GBemu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
